--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 
     </head>
 
+	!DOCTYPE html>
+
+
+
+<html>
+    <head>
+        <title>Portfolio </title>
+  
+
+<!-- End header -->
+
+    </head>
+
 	<body>
 
 <iframe
@@ -52,4 +65,4 @@
   frameborder="0"
 ></iframe></body>
 
-</html>
+</html></html>
