--- a/index.html
+++ b/index.html
@@ -24,45 +24,26 @@
 
     </head>
 
-	<body>
 
-<iframe
-  src="https://player.cloudinary.com/embed/?cloud_name=dmj1jojfe&public_id=glow_ball_krykz7&profile=cld-looping"
-  width="640"
-  height="360" 
-  style="height: auto; width: 100%; aspect-ratio: 640 / 360;"
-  allow="autoplay; fullscreen; encrypted-media; picture-in-picture"
-  allowfullscreen
-  frameborder="0"
-></iframe>
-<iframe
-  src="https://player.cloudinary.com/embed/?cloud_name=dmj1jojfe&public_id=multiple_tellies_gg2rfm&profile=cld-looping"
-  width="640"
-  height="360" 
-  style="height: auto; width: 100%; aspect-ratio: 640 / 360;"
-  allow="autoplay; fullscreen; encrypted-media; picture-in-picture"
-  allowfullscreen
-  frameborder="0"
-></iframe>
+<body style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; background: #111; color: white; font-family: sans-serif;">
 
+  <video autoplay loop muted playsinline width="320" style="margin: 10px; border-radius: 8px;">
+    <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/glow_ball_krykz7.mp4" type="video/mp4" />
+  </video>
 
-<iframe
-  src="https://player.cloudinary.com/embed/?cloud_name=dmj1jojfe&public_id=dudes_z8mvyg&profile=cld-looping"
-  width="640"
-  height="360" 
-  style="height: auto; width: 100%; aspect-ratio: 640 / 360;"
-  allow="autoplay; fullscreen; encrypted-media; picture-in-picture"
-  allowfullscreen
-  frameborder="0"
-></iframe>
-<iframe
-  src="https://player.cloudinary.com/embed/?cloud_name=dmj1jojfe&public_id=Waves_huy8tp&profile=cld-looping"
-  width="640"
-  height="360" 
-  style="height: auto; width: 100%; aspect-ratio: 640 / 360;"
-  allow="autoplay; fullscreen; encrypted-media; picture-in-picture"
-  allowfullscreen
-  frameborder="0"
-></iframe></body>
+  <video autoplay loop muted playsinline width="320" style="margin: 10px; border-radius: 8px;">
+    <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/multiple_tellies_gg2rfm.mp4" type="video/mp4" />
+  </video>
+
+  <video autoplay loop muted playsinline width="320" style="margin: 10px; border-radius: 8px;">
+    <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/dudes_z8mvyg.mp4" type="video/mp4" />
+  </video>
+
+  <video autoplay loop muted playsinline width="320" style="margin: 10px; border-radius: 8px;">
+    <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/Waves_huy8tp.mp4" type="video/mp4" />
+  </video>
+
+</body>
+</html>
 
 </html></html>
