--- a/index.html
+++ b/index.html
@@ -243,25 +243,24 @@
 
 
 
-<body style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; background: #111; color: white; font-family: sans-serif;">
-
-  <video autoplay loop muted playsinline width="320" style="margin: 10px; border-radius: 8px;">
+<body>
+  <video autoplay loop muted playsinline>
     <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/glow_ball_krykz7.mp4" type="video/mp4" />
   </video>
 
-  <video autoplay loop muted playsinline width="320" style="margin: 10px; border-radius: 8px;">
+  <video autoplay loop muted playsinline>
     <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/multiple_tellies_gg2rfm.mp4" type="video/mp4" />
   </video>
 
-  <video autoplay loop muted playsinline width="320" style="margin: 10px; border-radius: 8px;">
+  <video autoplay loop muted playsinline>
     <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/dudes_z8mvyg.mp4" type="video/mp4" />
   </video>
 
-  <video autoplay loop muted playsinline width="320" style="margin: 10px; border-radius: 8px;">
+  <video autoplay loop muted playsinline>
     <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/Waves_huy8tp.mp4" type="video/mp4" />
   </video>
-
 </body>
+
 </html>
 
 </html></html>
