--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Portfolio</title>
 
   <style>
+
+    body {
+  background-color: #eceaeb;
+  color: #2c3e50;         /* your custom font color (dark blue-gray here) */
+  font-family: 'Courier New', Courier, monospace;  /* sets Courier font */
+  padding: 20px;
+  text-align: center;
+}
     /* Unslider styles (only include if you want to use the slider, otherwise remove) */
     .unslider {
       overflow: auto;
@@ -88,7 +96,7 @@
 
     /* Your custom styles */
     body {
-      background-color: #111;
+      background-color: #eceaeb;
       color: white;
       font-family: sans-serif;
       padding: 20px;
