--- a/index.html
+++ b/index.html
@@ -112,6 +112,20 @@
     video:hover {
       transform: scale(1.05);
     }
+    .description-box {
+  max-width: 320px;           /* same width as videos */
+  margin: 30px auto 0 auto;   /* margin top and auto centering */
+  background: rgba(44, 62, 80, 0.85);  /* semi-transparent dark background */
+  padding: 15px 20px;
+  border-radius: 12px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1rem;
+  color: #ecf0f1;             /* light text color */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  line-height: 1.4;
+}
+
   </style>
 </head>
 
@@ -131,5 +145,6 @@
   <video autoplay loop muted playsinline>
     <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/Waves_huy8tp.mp4" type="video/mp4" />
   </video>
+
 </body>
 </html>
