--- a/index.html
+++ b/index.html
@@ -145,6 +145,30 @@
   <video autoplay loop muted playsinline>
     <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/Waves_huy8tp.mp4" type="video/mp4" />
   </video>
+<body>
+  <!-- Your videos -->
+  <video autoplay loop muted playsinline>
+    <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/glow_ball_krykz7.mp4" type="video/mp4" />
+  </video>
 
+  <video autoplay loop muted playsinline>
+    <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/multiple_tellies_gg2rfm.mp4" type="video/mp4" />
+  </video>
+
+  <video autoplay loop muted playsinline>
+    <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/dudes_z8mvyg.mp4" type="video/mp4" />
+  </video>
+
+  <video autoplay loop muted playsinline>
+    <source src="https://res.cloudinary.com/dmj1jojfe/video/upload/f_auto:video,q_auto:eco/Waves_huy8tp.mp4" type="video/mp4" />
+  </video>
+
+  <!-- Description box below all videos -->
+  <div class="description-box">
+    <p>
+      These pieces visually explore my thoughts around theoretical quantum physics, holographic universe theory, simulation theory, frequencies and reality shifting.
+    </p>
+  </div>
+</body>
 </body>
 </html>
