--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
   <!-- Description box below all videos -->
   <div class="description-box">
     <p>
-      These pieces visually explore my thoughts around theoretical quantum physics, holographic universe theory, simulation theory, frequencies and reality shifting.
+      These pieces visually explore theoretical quantum physics, holographic universe theory, simulation theory, frequencies and reality shifting.
+      <br>
+      weronikawojcikowska@icloud.com
     </p>
   </div>
 </body>
