--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
     <p>
       These pieces visually explore theoretical quantum physics, holographic universe theory, simulation theory, frequencies and reality shifting.
       <br>
-      weronikawojcikowska@icloud.com
+      <a href="mailto:weronikawojcikowska@icloud.com">weronikawojcikowska@icloud.com</a>
+
     </p>
   </div>
 </body>
