--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   line-height: 1.4;
+      .description-box a,
+.description-box a:visited,
+.description-box a:hover,
+.description-box a:active {
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  text-decoration: none; /* removes underline */
+}
+
 }
 
   </style>
