--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   border-radius: 12px;
   font-family: 'Courier New', Courier, monospace;
   font-size: 1rem;
-  color: #ecf0f1;             /* light text color */
+  color: #b4c1d1;             /* light text color */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   line-height: 1.4;
