--- a/index.html
+++ b/index.html
@@ -112,29 +112,31 @@
     video:hover {
       transform: scale(1.05);
     }
-    .description-box {
-  max-width: 300px;           /* same width as videos */
-  margin: 30px auto 0 auto;   /* margin top and auto centering */
-  background: rgba(44, 62, 80, 0.85);  /* semi-transparent dark background */
+  .description-box {
+  max-width: 300px;
+  margin: 30px auto 0 auto;
+  background: rgba(44, 62, 80, 0.85);
   padding: 15px 20px;
   border-radius: 12px;
   font-family: 'Courier New', Courier, monospace;
   font-size: 1rem;
-  color: #b4c1d1;             /* light text color */
+  color: #b4c1d1;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   line-height: 1.4;
-      .description-box a,
+}
+
+/* Move this outside of any block */
+.description-box a,
 .description-box a:visited,
 .description-box a:hover,
 .description-box a:active {
   color: white;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
-  text-decoration: none; /* removes underline */
+  text-decoration: none;
 }
 
-}
 
   </style>
 </head>
