--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
   .description-box {
   max-width: 300px;
   margin: 30px auto 0 auto;
-  background: rgba(44, 62, 80, 0.85);
+  background: #1b1a1d;
   padding: 15px 20px;
   border-radius: 12px;
   font-family: 'Courier New', Courier, monospace;
   font-size: 1rem;
-  color: #b4c1d1;
+  color: #ecf1f6;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   line-height: 1.4;
