--- a/index.html
+++ b/index.html
@@ -124,21 +124,28 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   line-height: 1.4;
+  transition: transform 0.3s ease;
 }
 
 
 .description-box a,
 .description-box a:visited,
 .description-box a:hover,
+    {
+  transform: scale(1.05);
 .description-box a:active {
   color: white;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
   text-decoration: none;
+  transform: scale(1.05);
 }
 
 
   </style>
+
+
+  
 </head>
 
 
