--- a/index.html
+++ b/index.html
@@ -112,34 +112,37 @@
     video:hover {
       transform: scale(1.05);
     }
+    
   .description-box {
-  max-width: 300px;
-  margin: 30px auto 0 auto;
-  background: #1b1a1d;
-  padding: 15px 20px;
-  border-radius: 12px;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 1rem;
-  color: #ecf1f6;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  text-align: center;
-  line-height: 1.4;
-  transition: transform 0.3s ease;
-}
+    max-width: 300px;
+    margin: 30px auto 0 auto;
+    background: #1b1a1d;
+    padding: 15px 20px;
+    border-radius: 12px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1rem;
+    color: #ecf1f6;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    line-height: 1.4;
+    transition: transform 0.3s ease;
+  }
+
+  .description-box:hover {
+    transform: scale(1.05);
+  }
+
+  .description-box a,
+  .description-box a:visited,
+  .description-box a:hover,
+  .description-box a:active {
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    text-decoration: none;
+  }
 
 
-.description-box a,
-.description-box a:visited,
-.description-box a:hover,
-    {
-  transform: scale(1.05);
-.description-box a:active {
-  color: white;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight: bold;
-  text-decoration: none;
-  transform: scale(1.05);
-}
 
 
   </style>
@@ -169,7 +172,7 @@
   <!-- Description box below all videos -->
   <div class="description-box">
     <p>
-      These pieces visually explore theoretical quantum physics, holographic universe theory, simulation theory, frequencies and reality shifting.
+      Visuals inspired by theoretical quantum physics, holographic universe theory, simulation theory, frequencies and reality shifting.
       <br>
       <a href="mailto:weronikawojcikowska@icloud.com">weronikawojcikowska@icloud.com</a>
 
